testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/not_valid_args_elem.lkql
val rules = @{
    identifier_suffixes: ["hehi"]
}
